# synapse

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml  synapse_code_review_report.md
.cargo/: deny.toml
src/: lib.rs
src/client/: config.rs  constants.rs  error.rs  logging.rs  measurement.rs  mod.rs  progress.rs  reporter.rs  socket.rs  statistics.rs  visualizer.rs
src/protocol/: error.rs  message.rs  mod.rs
src/server/: config.rs  mod.rs  monitor.rs
synapse/: .gitignore  Cargo.toml  README.md
tests/: client_test.rs
tests/integration/: client_test.rs
