[package]
name = "synapse"
version = "0.1.0"
edition = "2021"

[lib]
name = "synapse"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
hdrhistogram = "7.5"
indicatif = "0.17"
colored = "2.1"
thiserror = "1.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

