[package]
name = "synapse"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"  # Minimum Supported Rust Version (MSRV)

[lib]
name = "synapse"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
hdrhistogram = "7.5"
indicatif = "0.17"
colored = "2.1"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"

[dev-dependencies]
mockall = "0.12"
proptest = "1.5"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

